--- a/Acid Interstate Shaders/shaders/shaders.properties
+++ b/Acid Interstate Shaders/shaders/shaders.properties
@@ -16,7 +16,8 @@ shadowTranslucent=true
 
 # Frustum culling
 # Enable or disable frustum culling
-frustum.culling=true
+frustum.culling=false
+shadow.culling=false
 
 # Enable or disable the dynamic hand light from "Dynamic Lights"
 # This option can be used to disable the dynamic hand light from "Dynamic Lights" if the shader implements its own hand light.
