--- a/Acid Interstate Shaders/shaders/shaders.settings
+++ b/Acid Interstate Shaders/shaders/shaders.settings
@@ -8,10 +8,10 @@ https://sildurs-shaders.github.io/
     #define grass_shadows                       //Also disables tallgrass and flowers shadows
     #ifdef Shadows
     const float shadowDistance = 80.0;			//Render distance of shadows. 60=lite, 80=med, 80=high, 120=extreme [60.0 70.0 80.0 90.0 100.0 110.0 120.0 130.0 140.0 150.0 160.0 170.0 180.0 190.0 200.0 210.0 220.0 230.0 240.0 250.0 260.0 270.0 280.0 290.0 300.0 310.0 320.0 330.0 340.0 350.0 360.0 370.0 380.0 390.0 400.0]
-    const int shadowMapResolution = 1024;		//Shadows resolution. [256 512 1024 2048 3072 4096 6144 8192 16384] 512=lite, 1024=med, 2048=high, 3072=extreme 
+    const int shadowMapResolution = 2048;		//Shadows resolution. [256 512 1024 2048 3072 4096 6144 8192 16384] 512=lite, 1024=med, 2048=high, 3072=extreme 
     const float k = 1.8;
     #define Nearshadowplane 0.05	            //[0.04 0.045 0.05 0.055 0.06 0.065 0.07 0.075 0.08 0.085 0.09 0.095 0.1] close quality, lower=higher quality, 0.09 is required for 2.0 farshadowmap to prevent glitches
-    #define Farshadowplane 1.2                  //[0.6 0.8 1.0 1.2 1.4 1.6 1.8 2.0] far quality, streches the shadowmap, lower values closer, higher further away: 0.8=extreme, 1.0=high, 1.2=medium, 1.4=lite
+    #define Farshadowplane 1.0                  //[0.6 0.8 1.0 1.2 1.4 1.6 1.8 2.0] far quality, streches the shadowmap, lower values closer, higher further away: 0.8=extreme, 1.0=high, 1.2=medium, 1.4=lite
     float a = exp(Nearshadowplane);
     float b = (exp(Farshadowplane)-a)*shadowDistance/128.0;
     float calcDistortion(vec2 worldpos){
@@ -22,7 +22,7 @@ https://sildurs-shaders.github.io/
 
 #ifdef composite0
     #define ColoredShadows						//Toggle colored shadows
-    //#define Penumbra                            //Toggle penumbra soft shadows
+    #define Penumbra                            //Toggle penumbra soft shadows
     //#define raytracedShadows                  //Improves closeup and faraway shadows. Also allows shadows to be cast outside of the shadowmap, outside of your shadows render distance. Requires shadows to be enabled. Has some issues since it's raytraced in screenspace.
     const int VPS_samples = 8;                  //Used for penumbra shadows [1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30]
     #define shadow_samples 10                   //Used for shadows in general [1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30]
@@ -30,11 +30,11 @@ https://sildurs-shaders.github.io/
     const bool 	shadowHardwareFiltering1 = true;
     const float	sunPathRotation	= -40.0;		//[-10.0 -20.0 -30.0 -40.0 -50.0 -60.0 -70.0 -80.0 0.0 10.0 20.0 30.0 40.0 50.0 60.0 70.0 80.0]
     
-    //#define SSDO				                //Ambient Occlusion, makes lighting more realistic. High performance impact.
+    #define SSDO				                //Ambient Occlusion, makes lighting more realistic. High performance impact.
         #define ao_strength 1.0                 //[0.25 0.5 0.75 1.0 1.25 1.5 1.75 2.0 2.25 2.5 2.75 3.0 3.25 3.5 3.75 4.0]
 
     #define Godrays
-        const int grays_sample = 17;            //17=lite, 17=med, 20=high, 23=extreme
+        const int grays_sample = 20;            //17=lite, 17=med, 20=high, 23=extreme
     //#define Volumetric_Lighting               //Disable godrays before enabling volumetric lighting.
 
     //#define Lens_Flares
@@ -78,8 +78,8 @@ https://sildurs-shaders.github.io/
 
 	#define Clouds 3                            //[0 1 2 3 4] Toggle clouds. 0=Off, 1=Default MC, 2=2D, 3=VL, 4=2D+VL, also adjust in gbuffers_cloud
 		#define cloudsIT 6                      //[6 8 10 12 14 16 18 20 24 32 48] Volumetric clouds quality.
-		#define cloudreflIT 2                   //[2 4 6 8 10 12 14 16] Reflected volumetric clouds quality.
-		//#define Cloud_reflection              //Toggle clouds reflection in water	
+		#define cloudreflIT 4                   //[2 4 6 8 10 12 14 16] Reflected volumetric clouds quality.
+		#define Cloud_reflection              //Toggle clouds reflection in water	
         #define cloud_height 256.0		        //[64.0 80.0 96.0 112.0 128.0 144.0 160.0 176.0 192.0 208.0 224.0 240.0 256.0 272.0 288.0 304.0 320.0 336.0 352.0 368.0 384.0 400.0]
 
 	#define waterRefl                           //Toggle water reflections
@@ -90,12 +90,12 @@ https://sildurs-shaders.github.io/
     #define causticsStrength 0.8                //[0.1 0.15 0.2 0.25 0.30 0.35 0.4 0.45 0.5 0.55 0.6 0.65 0.7 0.75 0.8 0.85 0.9 0.95 1.0 1.05 1.10 1.15 1.20 1.25 1.3 1.35 1.4 1.45 1.5 1.55 1.6 1.65 1.75 1.8 1.85 1.9 1.95 2.0]
     #define waveSize 1.0                        //[0.25 0.5 0.75 1.0 1.25 1.5 1.75 2.0 2.25 2.5 2.75 3.0] Adjust water wave size, includes refraction and caustic size.
 
-    //#define metallicRefl                        //Toggle reflections for metallic blocks defined in block.properties
+    #define metallicRefl                        //Toggle reflections for metallic blocks defined in block.properties
     //#define polishedRefl                        //Toggle reflections for polished blocks defined in block.properties   
     #define metalStrength 1.0                   //[0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1.0 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8 1.9 2.0] Metallic and polished reflection strength
     #define metallicSky 0.1                     //[0.0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1.0 1.1 1.2 1.3 1.4 1.5 1.6 1.7 1.8 1.9 2.0] Sky reflection strength
 
-	//#define RainReflections                   //Toggle rain reflections, wetness
+	#define RainReflections                   //Toggle rain reflections, wetness
 	#define BiomeCheck                          //Toggle biome check for rain reflections. Only enable if no reflections are present. Updating optifine might resolve missing reflections with this on.
 	#define rainNoise 1.0                       //[1.0 2.0 3.0 4.0 5.0 6.0 7.0 8.0 9.0 10.0] Higher values means less noise
 
@@ -155,7 +155,7 @@ https://sildurs-shaders.github.io/
     #define POM_DIST 16.0		//[8.0 16.0 24.0 32.0 40.0 48.0 56.0 64.0 72.0 80.0 88.0 96.0 104.0 112.0 120.0 128.0]
     #define POM_DEPTH 0.30		//[0.05 0.10 0.15 0.20 0.25 0.30 0.35 0.40 0.45 0.50 0.55 0.60 0.65 0.70 0.75 0.80 0.85 0.90 0.95 1.0]
 
-    //#define metallicRefl        //Toggle reflections for blocks defined in block.properties
+    #define metallicRefl        //Toggle reflections for blocks defined in block.properties
     //#define polishedRefl        //Toggle reflections for polished blocks defined in block.properties
 
     #define Waving_Leaves
